syntax = "proto3";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

package grpc;

message Station {
    string id = 1;
    string name = 2;
    string timezone = 3;
}

message GetStationsRequest {
    repeated string ids = 1 [(gogoproto.nullable) = false];
}

message GetStationsResponse {
    map<string,Station> sts = 1;
    string err = 2;
}


message GetAllStationsRequest {
}

message GetAllStationsResponse {
    map<string,Station> sts = 1;
    string err = 2;
}

message AddStationsRequest {
    repeated Station sts = 1;
}

message AddStationsResponse {
    string err = 1;
}


service StationSVC {
    rpc GetStations(GetStationsRequest) returns (GetStationsResponse) {}
    rpc GetAllStations(GetAllStationsRequest) returns (GetAllStationsResponse) {}
    rpc AddStations(AddStationsRequest) returns (AddStationsResponse) {}
}


